--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 
           <div class='row'>
             <div class='col-md-4'>Converted Date:</div>
-            <div class='col-md-4'>{{serverDetails.toTimestamp | date:'dd/MM/yyyy'}}</div>
+            <div class='col-md-4'>{{serverDetails.toTimestamp | date:'MM/dd/yyyy'}}</div>
           </div>
           <div class='row'>
             <div class='col-md-4'>Converted Time:</div>
